--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,53 @@
 * {
   font-family: 'Montserrat', sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-body {
-  background-color: #ccc;
+html{
+  min-height: 100vh;
+  position: relative;
 }
+
+main {
+  margin-bottom: 250px;
+}
+
+/* NAVBAR */
+#logo {
+  position: absolute;
+  top:10px;
+  left: 9.5%;
+}
+
+#logo img {
+  width: 50px;
+}
+
+#navbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #161616;
+  padding: 20px;
+  text-transform: uppercase;
+  list-style: none;
+}
+
+#navbar li {
+  margin: 0 10px;
+  padding: 5px;
+}
+
+#navbar .nav-link {
+  color: #FFF;
+  text-decoration: none;
+  transition: 0.5s;
+  font-size: 14px;
+}
+
+#navbar .nav-link:hover {
+  color: #999;
+}
+
