--- a/css/styles.css
+++ b/css/styles.css
@@ -51,3 +51,13 @@ main {
   color: #999;
 }
 
+/* FOOTER */
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  background-color: #000;
+  color: #FFF;
+  padding: 50px 0;
+}
